tests/fail/unknown_attribute.rs
use openapi_type::OpenapiType;

#[derive(OpenapiType)]
#[openapi(pizza)]
struct Foo;

fn main() {}
